--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.71.1",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
